2006-09-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: sample pkgIndex.tcl that allows using tkcon as a
	package.

	* tkcon.tcl (::tkcon::InitSlave): adjust to make the first file
	passed in to be argv0 in the slave

2006-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon): default wm protocol to hide tkcon when used
	in embedded context.

2006-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: remove use of -exact in package require Tk

2006-06-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: updated to handle ttk scrollbars as well as other UI
	cleanup.

2006-06-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: modify CVS location after SF changes

	* README.txt: correct reference email address

2006-02-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon): update 'gets stdin' override (tkcon congets)
	to support usage at script load time. (decoster)

2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (MenuConfigure): Fix ActiveTcl Help link when pointing
	to a file with space in path. [Bug 1408425]
	(::tkcon::Save, ::tkcon::Load): in VFS paths, use the X11 dialogs
	that support viewing in VFS dirs.

2005-09-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::AtSource): do not require argv to be defined
	(edit): enable text -undo in editor
	(::tkcon::InitUI): shrink aqua resize control space alloted

2005-07-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: add ::tkcon::OPT(maxlinelen) (default 0 == unlimited)
	and 'tkcon linelength ?value?' to optionally limit long result
	lines.  True result is still captured in $_ (and 'puts $_' works).

2005-05-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (InitMenus): add ActiveTcl Help menu item, if AT Help
	is found.

2005-04-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandXotcl): allow for xotcl method name expansion,
	if you change ::tkcon::OPT(expandorder) to include Xotcl before
	Procname
